test/testdata/classes/invalid_property_access_error.lox
class Foo {}
Foo.x; // error: property access is not valid for 'class' object
